@@ -1,6 +1,9 @@
 package net.demilich.metastone.game.cards.catalogues;
 
 import com.google.common.base.CaseFormat;
+import com.google.common.collect.Multimap;
+import com.google.common.collect.Multimaps;
+import com.google.common.collect.Sets;
 import com.google.common.io.CharSource;
 import com.hiddenswitch.protos.Serialization;
 import com.hiddenswitch.spellsource.core.ResourceInputStream;
@@ -37,26 +40,26 @@ public class ListCardCatalogue implements CardCatalogue {
 	}
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(ListCardCatalogue.class);
-	protected final Map<String, DeckFormat> formats = new HashMap<>();
-	protected final Set<String> bannedCardIds = new HashSet<>();
-	protected final Set<String> hardRemovalCardIds = new HashSet<>();
+	protected final Map<String, DeckFormat> formatsByName = new ConcurrentHashMap<>(64);
+	protected final Set<String> bannedCardIds = Sets.newConcurrentHashSet();
+	protected final Set<String> hardRemovalCardIds = Sets.newConcurrentHashSet();
 	protected final Map<String, Card> cards = new ConcurrentHashMap<>(8196);
-	protected final Map<String, CardCatalogueRecord> records = new LinkedHashMap<>(8196);
-	protected final Map<String, List<CardCatalogueRecord>> recordsByName = new LinkedHashMap<>(8196);
-	protected Map<String, Card> classCards;
-	protected Map<String, Card> heroCards;
-	protected Map<String, Card> formatCards;
-	protected Map<DeckFormat, CardList> classCardsForFormat;
-	protected Map<DeckFormat, List<String>> baseClassesForFormat;
+	protected final Map<String, CardCatalogueRecord> records = new ConcurrentHashMap<>(8196);
+	protected final Multimap<String, CardCatalogueRecord> recordsByName = Multimaps.newSetMultimap(new HashMap<>(8196), Sets::newConcurrentHashSet);
+	protected final Map<String, Card> classCards = new ConcurrentHashMap<>(64);
+	protected final Map<String, Card> heroCards = new ConcurrentHashMap<>(64);
+	protected final Map<String, Card> formatCardsByName = new ConcurrentHashMap<>(64);
+	protected final Multimap<DeckFormat, Card> classCardsForFormat = Multimaps.newSetMultimap(new ConcurrentHashMap<>(64), Sets::newConcurrentHashSet);
+	protected final Multimap<DeckFormat, String> baseClassesForFormat = Multimaps.newSetMultimap(new ConcurrentHashMap<>(64), Sets::newConcurrentHashSet);
 
 	@Override
 	public Map<String, DeckFormat> formats() {
-		return formats;
+		return formatsByName;
 	}
 
 	@Override
 	public DeckFormat getFormat(String name) {
-		return formats.get(name);
+		return formatsByName.get(name);
 	}
 
 	@Override
@@ -73,7 +76,7 @@ public class ListCardCatalogue implements CardCatalogue {
 	@NotNull
 	public CardList getAll() {
 		CardList result = new CardArrayList();
-		for (Card card : cards.values()) {
+		for (var card : cards.values()) {
 			result.addCard(card.clone());
 		}
 		return result;
@@ -88,7 +91,7 @@ public class ListCardCatalogue implements CardCatalogue {
 	@Override
 	public @NotNull
 	Card getCardById(@NotNull String id) {
-		Card card = cards.getOrDefault(id.toLowerCase(), null);
+		var card = cards.getOrDefault(id.toLowerCase(), null);
 		if (card != null) {
 			card = card.getCopy();
 		} else {
@@ -106,7 +109,7 @@ public class ListCardCatalogue implements CardCatalogue {
 	@Override
 	@Nullable
 	public Card getCardByName(String name) {
-		CardCatalogueRecord namedCard = recordsByName.get(name).stream().filter(ccr -> ccr.getDesc().isCollectible()).findFirst().orElse(recordsByName.get(name).get(0));
+		var namedCard = recordsByName.get(name).stream().filter(ccr -> ccr.getDesc().isCollectible()).findFirst().orElse(recordsByName.get(name).stream().findFirst().orElse(null));
 		if (namedCard != null) {
 			return getCardById(namedCard.getId());
 		}
@@ -114,12 +117,13 @@ public class ListCardCatalogue implements CardCatalogue {
 	}
 
 	@Override
+	@NotNull
 	public Card getCardByName(String name, String heroClass) {
-		List<CardCatalogueRecord> namedCards = recordsByName.get(name).stream().filter(ccr -> ccr.getDesc().isCollectible()).collect(Collectors.toList());
+		var namedCards = recordsByName.get(name).stream().filter(ccr -> ccr.getDesc().isCollectible()).toList();
 		if (!namedCards.isEmpty()) {
 			if (namedCards.size() > 1) {
-				for (CardCatalogueRecord namedCard : namedCards) {
-					Card card = getCardById(namedCard.getId());
+				for (var namedCard : namedCards) {
+					var card = getCardById(namedCard.getId());
 					if (card.hasHeroClass(heroClass)) {
 						return card;
 					}
@@ -127,14 +131,14 @@ public class ListCardCatalogue implements CardCatalogue {
 			}
 			return getCardById(namedCards.get(0).getId());
 		}
-		return getCardById(recordsByName.get(name).get(0).getDesc().getId());
+		return getCardById(recordsByName.get(name).stream().findFirst().orElseThrow(NullPointerException::new).getDesc().getId());
 	}
 
 	@Override
 	@NotNull
 	public CardList query(DeckFormat deckFormat, Spellsource.CardTypeMessage.CardType cardType, Spellsource.RarityMessage.Rarity rarity, String heroClass, Attribute tag, boolean clone) {
 		CardList result = new CardArrayList();
-		for (Card card : cards.values()) {
+		for (var card : cards.values()) {
 
 			if (!deckFormat.isInFormat(card)) {
 				continue;
@@ -178,22 +182,26 @@ public class ListCardCatalogue implements CardCatalogue {
 		var res = records.remove(id);
 		cards.remove(id);
 		if (res != null) {
-			recordsByName.remove(res.getDesc().getName());
-			if (res.getDesc().getType() == Spellsource.CardTypeMessage.CardType.FORMAT) {
-				formatCards.remove(res.getDesc().getName());
-			}
-			if (res.getDesc().getType() == Spellsource.CardTypeMessage.CardType.CLASS) {
-				classCards.remove(res.getDesc().getHeroClass());
-				for (var format : classCardsForFormat.keySet()) {
-					classCardsForFormat.get(format).removeIf(c -> c.getDesc().getId().equals(res.getId()));
+			recordsByName.remove(res.getDesc().getName(), res);
+			switch (res.desc().getType()) {
+				case FORMAT -> {
+					formatCardsByName.remove(res.getDesc().getName());
+					formatsByName.remove(res.getDesc().getName());
 				}
+				case CLASS -> {
+					classCards.remove(res.getDesc().getHeroClass());
+					for (var format : classCardsForFormat.keySet()) {
+						classCardsForFormat.get(format).removeIf(c -> c.getDesc().getId().equals(res.getId()));
+					}
+				}
+				case HERO -> heroCards.remove(res.id());
 			}
 		}
 	}
 
 	@Override
 	public Card getFormatCard(String name) {
-		return formatCards.getOrDefault(name, null);
+		return formatCardsByName.getOrDefault(name, null);
 	}
 
 	@Override
@@ -203,17 +211,17 @@ public class ListCardCatalogue implements CardCatalogue {
 
 	@Override
 	public CardList getClassCards(DeckFormat format) {
-		return classCardsForFormat.get(format);
+		return new CardArrayList(classCardsForFormat.get(format));
 	}
 
 	@Override
 	public List<String> getBaseClasses(DeckFormat deckFormat) {
-		return baseClassesForFormat.get(deckFormat);
+		return new ArrayList<>(baseClassesForFormat.get(deckFormat));
 	}
 
 	public CardList query(DeckFormat deckFormat, Predicate<Card> filter) {
 		CardList result = new CardArrayList();
-		for (Card card : cards.values()) {
+		for (var card : cards.values()) {
 			if (GameLogic.isCardType(card.getCardType(), Spellsource.CardTypeMessage.CardType.CLASS) || GameLogic.isCardType(card.getCardType(), Spellsource.CardTypeMessage.CardType.FORMAT)) {
 				continue;
 			}
@@ -260,8 +268,6 @@ public class ListCardCatalogue implements CardCatalogue {
 
 	/**
 	 * Adds or replaces a card for the given JSON.
-	 * <p>
-	 * If a {@link CardDesc#getName()} {@code name} field is specified and no {@code id}, the
 	 *
 	 * @param json
 	 */
@@ -278,10 +284,34 @@ public class ListCardCatalogue implements CardCatalogue {
 		}
 
 		var id = cardDesc.getId();
-		try (ReaderInputStream targetStream = new ReaderInputStream(CharSource.wrap(Json.encode(cardDesc)).openStream(), Charset.defaultCharset())) {
-			loadCards(Collections.singletonList(new ResourceInputStream(id + ".json", targetStream)));
-		}
+		loadCards(Collections.singletonList(cardDesc));
 		return id;
+	}
+
+	/**
+	 * Clears all the cards in this catalogue.
+	 */
+	public void clear() {
+		formatsByName.clear();
+		bannedCardIds.clear();
+		hardRemovalCardIds.clear();
+		cards.clear();
+		records.clear();
+		recordsByName.clear();
+		classCards.clear();
+		heroCards.clear();
+		formatCardsByName.clear();
+		classCardsForFormat.clear();
+		baseClassesForFormat.clear();
+	}
+
+	/**
+	 * Loads all the cards from the specified card descriptions.
+	 *
+	 * @param cardDescs
+	 */
+	public void loadCards(List<CardDesc> cardDescs) {
+		updatedWith(cardDescs.stream().collect(toMap(CardDesc::getId, Function.identity())));
 	}
 
 	/**
@@ -291,69 +321,95 @@ public class ListCardCatalogue implements CardCatalogue {
 	 * @param inputStreams
 	 */
 	public void loadCards(Collection<ResourceInputStream> inputStreams) {
-		Map<String, CardDesc> cardDesc = new HashMap<>();
-		ArrayList<String> badCards = new ArrayList<>();
-		CardParser cardParser = new CardParser();
+		Map<String, CardDesc> cardDescs = new HashMap<>();
+		var cardParser = new CardParser();
 
-		for (ResourceInputStream resourceInputStream : inputStreams) {
+		for (var resourceInputStream : inputStreams) {
 			try {
-				final CardCatalogueRecord record = cardParser.parseCard(resourceInputStream);
-				CardDesc desc = record.getDesc();
-				if (cardDesc.containsKey(desc.getId())) {
+				var desc = cardParser.parseCard(resourceInputStream).desc();
+				if (cardDescs.containsKey(desc.getId())) {
 					LOGGER.error("loadCards: Card id {} is duplicated!", desc.getId());
 				}
-				cardDesc.put(desc.getId(), desc);
-				records.put(desc.getId(), record);
-				recordsByName.putIfAbsent(desc.getName(), new ArrayList<>());
-				recordsByName.get(desc.getName()).add(record);
+				cardDescs.put(desc.getId(), desc);
 			} catch (Exception e) {
 				LOGGER.error("loadCards: An error occurred while processing {}: {}", resourceInputStream.getFileName(), e.toString());
-				badCards.add(resourceInputStream.getFileName());
 			}
 		}
 
-		for (CardDesc desc : cardDesc.values()) {
-			Card instance = desc.create();
+		updatedWith(cardDescs);
+	}
+
+	/**
+	 * Updates the internal data structures with the provided card descs
+	 *
+	 * @param cardDescs
+	 */
+	protected void updatedWith(Map<String, CardDesc> cardDescs) {
+		var newCards = new ArrayList<Card>(cardDescs.size());
+		for (var desc : cardDescs.values()) {
+			var instance = desc.create();
+			newCards.add(instance);
 			cards.put(instance.getCardId(), instance);
+			var record = new CardCatalogueRecord(desc.getId(), desc);
+			records.put(desc.getId(), record);
+			// find old name and remove it if it exists
+			var existing = records.get(desc.getId());
+			if (existing != null) {
+				recordsByName.remove(existing.desc().getName(), existing);
+				if (existing.desc().getType() == Spellsource.CardTypeMessage.CardType.FORMAT) {
+					formatsByName.remove(existing.desc().getName());
+					formatCardsByName.remove(existing.desc().getName());
+				}
+			}
+			recordsByName.put(desc.getName(), record);
+			if (desc.draft() != null && desc.draft().getBanned()) {
+				bannedCardIds.add(desc.getId());
+			} else {
+				bannedCardIds.remove(desc.getId());
+			}
+			if (desc.artificialIntelligence() != null && desc.artificialIntelligence().getHardRemoval()) {
+				hardRemovalCardIds.add(desc.getId());
+			} else {
+				hardRemovalCardIds.remove(desc.getId());
+			}
 		}
 
-		List<String> sets = new ArrayList<>();
-		cards.forEach((s, card) -> {
-			if (!sets.contains(card.getCardSet())) {
-				sets.add(card.getCardSet());
-			}
-		});
-		all.getSets().clear();
-		for (String set : sets) {
-			all.addSet(set);
+		for (var card : newCards) {
+			all.addSet(card.getCardSet());
 		}
-		CardList formats = cards.values().stream()
-				.filter(card -> card.getCardType() == Spellsource.CardTypeMessage.CardType.FORMAT).collect(Collectors.toCollection(CardArrayList::new));
-		this.formats.put(FORMAT_NAME_ALL, this.all);
-		for (Card formatCard : formats) {
-			this.formats.put(formatCard.getName(), new DeckFormat()
+
+		var formatCards = newCards.stream()
+				.filter(card -> card.getCardType() == Spellsource.CardTypeMessage.CardType.FORMAT)
+				.toList();
+
+		formatsByName.put(FORMAT_NAME_ALL, this.all);
+		for (var formatCard : formatCards) {
+			formatsByName.put(formatCard.getName(), new DeckFormat()
 					.setSecondPlayerBonusCards(formatCard.getDesc().getSecondPlayerBonusCards())
 					.setValidDeckCondition(formatCard.getDesc().getCondition())
 					.withName(formatCard.getName())
 					.withCardSets(formatCard.getCardSets()));
 		}
-		formatCards = formats.stream().collect(toMap(Card::getName, Function.identity()));
+		formatCardsByName.putAll(formatCards.stream().collect(toMap(Card::getName, Function.identity())));
 		// Populate the class and hero cards
-		classCards = cards.values().stream().filter(c -> c.getCardType() == Spellsource.CardTypeMessage.CardType.CLASS).collect(toMap(Card::getHeroClass, Function.identity()));
-		classCardsForFormat = formatCards.entrySet().stream().collect(toMap(kv -> getFormat(kv.getKey()), kv -> {
-			var key = getFormat(kv.getKey());
-			return classCards.values().stream().filter(key::isInFormat).collect(Collectors.toCollection(CardArrayList::new));
-		}));
-		var allClassCards = new CardArrayList();
-		allClassCards.addAll(classCards.values());
-		classCardsForFormat.put(all(), allClassCards);
-		heroCards =
-				classCards.values().stream().map(value -> getCardById(Objects.requireNonNull(value).getHero())).collect(toMap(Card::getHeroClass, i -> i));
-		baseClassesForFormat = formatCards.entrySet().stream().collect(toMap(kv -> getFormat(kv.getKey()), kv -> {
-			var key = getFormat(kv.getKey());
-			return classCards.values().stream().filter(c -> c.isCollectible() && key.isInFormat(c)).map(Card::getHeroClass).collect(Collectors.toList());
-		}));
-		baseClassesForFormat.put(all(), allClassCards.stream().map(Card::getHeroClass).distinct().collect(Collectors.toList()));
+		classCards.putAll(newCards.stream()
+				.filter(c -> c.getCardType() == Spellsource.CardTypeMessage.CardType.CLASS)
+				.collect(toMap(Card::getHeroClass, Function.identity())));
+		for (var classCard : classCards.values()) {
+			for (var format : formats().values()) {
+				if (format.isInFormat(classCard)) {
+					classCardsForFormat.get(format).removeIf(existing -> Objects.equals(existing.getCardId(), classCard.getCardId()));
+					classCardsForFormat.put(format, classCard);
+					baseClassesForFormat.put(format, classCard.getHeroClass());
+				}
+			}
+			classCardsForFormat.get(all()).removeIf(existing -> Objects.equals(existing.getCardId(), classCard.getCardId()));
+			classCardsForFormat.put(all(), classCard);
+			baseClassesForFormat.put(all(), classCard.getHeroClass());
+		}
+
+		heroCards.putAll(
+				classCards.values().stream().map(value -> getCardById(Objects.requireNonNull(value).getHero())).collect(toMap(Card::getHeroClass, Function.identity())));
 	}
 
 	public void loadCardsFromFilesystemDirectories(String... directories) {
